--- a/resources/application.conf
+++ b/resources/application.conf
@@ -4,6 +4,6 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ io.kraftsman.ApplicationKt.module ]
+        modules = [ io.kraftsman.Server.prepare ]
     }
 }
